Changes for Challenge

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                 </ul>
             </div>
 
-            <div class="col-md-9">
-                <div class="col-md-9">
+            
+                <div class="col-lg-9">
                     <table class="table table-striped">
                       <thead>
                         <tr>
@@ -69,7 +69,7 @@
                       </thead>
                       <tbody></tbody>
                     </table>
-                  </div>
+                </div>
             </div>
 
         </div>
