--- a/index.html
+++ b/index.html
@@ -41,16 +41,29 @@
             <div class="col-md-3 bg-dark">
                 <form class="bg-dark">
                     <p>Filter Search</p>
-                </form>
-                <ul class="list-group bg-dark" [tag.]{style="font-family: inherit; font-size: 1rem;"}>
+                 <ul class="list-group bg-dark" [tag.]{style="font-family: inherit; font-size: 1rem;"}>
                     <li class="list-group-item bg-dark" [tag.]{style="font-family: inherit; font-size: 1rem;"}>
                         <label for="date">Enter Date</label>
                         <input type="text" placeholder="1/10/2010" id="datetime" />
                     </li>
                     <li class="list-group-item bg-dark" [tag.]{style="font-family: inherit; font-size: 1rem;"}>
-                        <button id="filter-btn" type="button" class="btn btn-dark">Filter Table</button>
+                        <label for="city">Enter City</label>
+                        <input type="text" id="city" />
                     </li>
-                </ul>
+                    <li class="list-group-item bg-dark" [tag.]{style="font-family: inherit; font-size: 1rem;"}>
+                        <label for="state">Enter State</label>
+                        <input type="text" id="state" />
+                    </li>
+                    <li class="list-group-item bg-dark" [tag.]{style="font-family: inherit; font-size: 1rem;"}>
+                        <label for="country">Enter Country</label>
+                        <input type="text" id="country" />
+                    </li>
+                    <li class="list-group-item bg-dark" [tag.]{style="font-family: inherit; font-size: 1rem;"}>
+                        <label for="shape">Enter Shape</label>
+                        <input type="text" id="shape" />
+                    </li>
+                 </ul>
+                </form>
             </div>
 
             
